--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,46 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# Database Config (Render PostgreSQL)
+# ===============================
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# HikariCP Connection Pool
+# ===============================
+spring.datasource.hikari.maximum-pool-size=5       # Render Free üçün optimal (max_connections=20)
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=10000        # 10s bo? qalsa ba?lan?r
+spring.datasource.hikari.max-lifetime=1800000      # 30 d?q-d?n bir yenil?nir
+spring.datasource.hikari.connection-timeout=30000  # 30s sor?u gözl?m?
+spring.datasource.hikari.leak-detection-threshold=20000 # 20s-d?n uzun saxlan?lan connection loglans?n
+
+# ===============================
+# JPA / Hibernate Config
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false                       # Connection leak riskini azald?r
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=30
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+
+# ===============================
+# Caching (m?s?l?n test n?tic?l?ri üçün)
+# ===============================
+spring.cache.type=simple
+
+# ===============================
+# Logging
+# ===============================
+logging.level.org.hibernate.SQL=warn
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=warn
+logging.level.com.zaxxer.hikari=info
+
