--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # ===============================
 # HikariCP Connection Pool
 # ===============================
-spring.datasource.hikari.maximum-pool-size=5       # Render Free üçün optimal (max_connections=20)
+spring.datasource.hikari.maximum-pool-size=5       
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=10000        # 10s bo? qalsa ba?lan?r
 spring.datasource.hikari.max-lifetime=1800000      # 30 d?q-d?n bir yenil?nir
