--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # ===============================
 spring.datasource.hikari.maximum-pool-size=5       
 spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=10000        # 10s bo? qalsa ba?lan?r
-spring.datasource.hikari.max-lifetime=1800000      # 30 d?q-d?n bir yenil?nir
-spring.datasource.hikari.connection-timeout=30000  # 30s sor?u gözl?m?
-spring.datasource.hikari.leak-detection-threshold=20000 # 20s-d?n uzun saxlan?lan connection loglans?n
+spring.datasource.hikari.idle-timeout=10000        
+spring.datasource.hikari.max-lifetime=1800000      
+spring.datasource.hikari.connection-timeout=30000 
+spring.datasource.hikari.leak-detection-threshold=20000 
 
 # ===============================
 # JPA / Hibernate Config
