--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,7 @@ spring.datasource.hikari.leak-detection-threshold=20000
 # JPA / Hibernate Config
 # ===============================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.open-in-view=false                       # Connection leak riskini azald?r
+spring.jpa.open-in-view=false                       
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=30
 spring.jpa.properties.hibernate.order_inserts=true
