--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,15 +11,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 
-# ===============================
-# HikariCP Connection Pool
-# ===============================
-spring.datasource.hikari.maximum-pool-size=5       
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=10000        
-spring.datasource.hikari.max-lifetime=1800000      
-spring.datasource.hikari.connection-timeout=30000 
-spring.datasource.hikari.leak-detection-threshold=20000 
+spring.datasource.hikari.maximum-pool-size=3       
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=5000       
+spring.datasource.hikari.max-lifetime=600000     
+spring.datasource.hikari.connection-timeout=10000 
+spring.datasource.hikari.leak-detection-threshold=15000 
+
 
 # ===============================
 # JPA / Hibernate Config
