--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,31 +8,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-spring.datasource.hikari.maximum-pool-size=3
-spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.idle-timeout=5000
-spring.datasource.hikari.max-lifetime=600000
-spring.datasource.hikari.connection-timeout=10000
-spring.datasource.hikari.leak-detection-threshold=15000
-
-
-# ===============================
-# JPA / Hibernate Config
-# ===============================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.batch_size=30
-spring.jpa.properties.hibernate.order_inserts=true
-spring.jpa.properties.hibernate.order_updates=true
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
-
-
-spring.cache.type=simple
-
-logging.level.org.hibernate.SQL=warn
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=warn
-logging.level.com.zaxxer.hikari=info
+spring.profiles.active=prod
 
