--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=simple-result-system
-
-spring.datasource.url=jdbc:postgresql://aws-1-eu-north-1.pooler.supabase.com:6543/postgres
-spring.datasource.username=postgres.ctplphuzoitsgvwrefgc
-spring.datasource.password=HELLOsalam.2025
+spring.datasource.url=jdbc:postgresql://dpg-d3fub0ffte5s73dprun0-a.oregon-postgres.render.com:5432/student_result_d0py
+spring.datasource.username=student_result_d0py_user
+spring.datasource.password=xXZAUlasILUf6ur83KMXZKMQLpcH124Z
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.jpa.hibernate.ddl-auto=update
