--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=student_result_d0py_user
 spring.datasource.password=xXZAUlasILUf6ur83KMXZKMQLpcH124Z
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.jpa.hibernate.ddl-auto=update
+# Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
