--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.hibernate.ddl-auto=update   # laz?m olarsa aktiv et
 
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=10
