--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.hibernate.ddl-auto=update   # laz?m olarsa aktiv et
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 
 # HikariCP connection pool
 spring.datasource.hikari.maximum-pool-size=5
@@ -15,4 +16,3 @@ spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=20000
-
